# hvc-finder

./: .gitignore  Gemfile  README.md  _config.yml  index.md  pyproject.toml
.github/workflows/: deploy.yml
src/hvc_finder/: __init__.py  build_page.py  calculate.py  download.py
templates/: hvc.html
